--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "cryptocurrency-icons": "^0.17.1",
+    "express": "^4.17.1",
     "lightweight-charts": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
